[metadata]
name = pyciede2000
version = 0.0.2
author = shameempk
author_email = shameempk@pm.me
description = Python package for calculating CIEDE2000 colour difference.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shameempk/pyciede2000
project_urls =
    Bug Tracker = https://github.com/shameempk/pyciede2000
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
	numpy

[options.packages.find]
where = src